fix: fix header alignment in contact form

--- a/themes/origins/styles/page.scss
+++ b/themes/origins/styles/page.scss
@@ -3,7 +3,8 @@
 yc-section {
   --reading-mode-width: min(60ch, 100%);
 
-  &:has(.page[data-page-width="reading-mode"]) {
+  &:has(.page[data-page-width="reading-mode"]),
+  &:has(form) {
     yc-section-head {
       width: var(--reading-mode-width);
       margin-inline: auto;
